<resources>
    <string name="app_name">ToS Manager</string>

    <!-- General -->
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="search">검색</string>

    <!-- Initial notice Activity -->
    <string name="text_notice_header">사용하기 앞서…</string>
    <string name="text_notice_confirm">확인</string>

    <!-- Log-in Activity -->
    <string name="text_sign_in_description">데이터 동기화를 위한</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_create_account">계정 생성</string>
    <string name="action_recover_password">비밀번호 찾기</string>
    <string name="separator">|</string>
    <string name="action_skip_sign_in">건너뛰기</string>

    <!-- Create account Activity-->
    <string name="prompt_password_confirm">비밀번호 확인</string>
    <string-array name="text_privacy_policy_description">
        <item>계정 생성시 </item>
        <item>개인정보처리방침</item>
        <item>에 동의한 것으로 간주합니다.</item>
    </string-array>

    <!-- Recover password Activity-->
    <string name="text_recover_password_description">이메일 주소 인증을 통해 비밀번호 찾기가 이루어집니다.</string>

    <!-- Navigation -->
    <string name="navigation_my_tos">내 약관</string>
    <string name="navigation_calendar">달력</string>
    <string name="navigation_configuration">환경 설정</string>

    <!-- My TOS Fragment -->
    <string name="my_tos_list_header">목록</string>
    <string name="sort_by_recency">최신 순</string>
    <string name="sort_by_recency_in_reverse">오래된 순</string>
    <string name="sort_by_name">이름 순(A-Z)</string>
    <string name="sort_by_name_in_reverse">이름 순(Z-A)</string>
    <string name="text_my_tos_search_hint">서비스 검색</string>

    <!-- ToS Details Activity -->
    <string name="text_edit_name">서비스 이름:</string>
    <string name="text_summary_table_corner">항목</string>

    <!-- Configuration Fragment -->
    <string name="header_ui_ux">UI/UX</string>
    <string name="input_tutorial_title">약관 입력 설명</string>
    <string name="input_tutorial_summary">약관 텍스트 입력 아래에 더 편리한 입력 방법에 대한 설명을 표시합니다.</string>

    <string name="header_data">데이터</string>
    <string name="import_title">가져오기</string>
    <string name="import_summary">약관 목록을 외부 파일로부터 받아들입니다.</string>
    <string name="export_title">내보내기</string>
    <string name="export_summary">약관 목록을 디바이스에 저장합니다.</string>

    <string name="header_calendar">달력</string>
    <string name="embedded_calendar_title">내장된 달력 사용</string>
    <string name="embedded_calendar_summary">이 설정을 끄면 일정은 기본 달력 어플리케이션에 저장됩니다.</string>

    <string name="header_account">계정</string>
    <string name="log_out_title">로그아웃</string>
    <string name="log_out_dialog_message">정말로 로그아웃 하시겠습니까?</string>

    <string name="header_miscellaneous">기타</string>
    <string name="version_info_title">버전 정보</string>

    <!-- Add ToS Activity -->
    <string name="title_input_tos">약관 입력</string>
    <string name="text_input_tos_directly">약관을 직접 입력하세요.</string>
    <string name="text_summarize">요약하기</string>
    <string name="text_summarize_dialog_message">입력한 약관을 요약하시겠습니까?</string>
    <string name="text_input_tos_by_share">
<![CDATA[
텍스트 선택, 또는 인터넷 브라우저로 약관 페이지에 들어간 뒤, <b>공유</b>기능에서 <font color="red"><b>요약하기</b></font>를 선택하세요.
]]>
    </string>
    <string name="text_do_not_show_again">해당 설명을 다시 보지 않습니다.</string>

    <!-- ToS Details Activity -->
    <string name="title_tos_details">요약 결과</string>
    <string name="action_delete_tos">약관 삭제</string>
    <string name="delete_tos_dialog_message">해당 약관을 삭제하시겠습니까?</string>

    <!-- Privacy Policy -->
    <string name="privacy_policy_text">
<![CDATA[
<p>
개발을 좀 더 진행시켜서 윤곽이 잡힌 뒤 결정. 아마 서비스를 제공하기 위한 정말 최소한의 정보만 필요할 것이다.
</p>
]]>
    </string>

    <!-- Initial notice -->
    <string name="text_notice">
<![CDATA[
<p>이 어플리케이션이 요약해주는 약관 요약본들은 결코 해당 서비스의 법률 문서, 또는 그의 일부가 아닙니다.</p>
<p>따라서 사용자는 <b><font color="red">이 앱이 제공하는 요약본 만으로 서비스의 약관을 다 이해했다는 착각을 절대로 하면 안됩니다.</font></b></p>
<p>이에 대해 발생한 피해에 대해서 <u>해당 어플리케이션은 일절 책임지지 않습니다.</u></p>
]]>
    </string>
    <string name="text_notice_use_cases">
<![CDATA[
<p><font color="#4682B4">한편 약관 요약본은 이런 상황에서 유용할 지도 모릅니다.</font> (클릭)</p>
<ul>
    <li>
    <p>본인이 \"<b>나는 이런 내용이 약관에 들어가면 그 서비스가 무엇이든 동의할 생각 없다.</b>\" 라는 생각을 가지고 계신다면, 요약본으로 <u>빠르게 서비스를 사용하지 않겠다는 결정을 할 수도 있습니다.</u></p>
    <p>요약본이 없다면 아마 기껏 약관을 읽고 있는데 그런 내용이 뒤늦게 발견될 수도 있을 겁니다.</p>
    </li>
    <li>
    <p>본인이 여러 개의 서비스를 두고 \"<b>이 유사한 서비스중 어떤 서비스가 가장 좋은 약관을 가지고 있을까?</b>\" 라는 생각을 가지고 계신다면, 요약본들로 <u>어떤 약관을 먼저 읽어볼 지 순서를 가늠할 수 있습니다.</u></p>
    <p>그러다가 약관까지 마음에 들어서 이 서비스를 사용하겠다고 결정하면, 다른 서비스 약관은 다 읽으려 하지 않아도 될 겁니다.</p>
    </li>
    <li>
    <p>그 밖에도 법률 용어에 거부감이 있을 때, 요약본이 조금이나마 도움이 될 수도 있습니다.</p>
    </li>
</ul>
]]>
    </string>
    <string name="text_notice_last">
<![CDATA[
<p>위의 내용을 확인하고 동의하신다면 아래 입력란에 \"<b>동의합니다</b>\" 또는 \"<b>I agree</b>\"를 입력하시고, 확인을 눌러주세요.</p>
]]>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>