<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/header_ui_ux">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="input_tutorial"
            android:title="@string/input_tutorial_title"
            android:summary="@string/input_tutorial_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_data">

        <Preference
            app:key="import"
            app:title="@string/import_title"
            app:summary="@string/import_summary" />
        <Preference
            app:key="export"
            app:title="@string/export_title"
            app:summary="@string/export_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_calendar">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="embedded_calender"
            android:title="@string/embedded_calendar_title"
        android:summary="@string/embedded_calendar_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_account">

        <Preference
            app:key="loginOut"
            app:title="@string/log_in_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_miscellaneous">

        <Preference
            android:key="version"
            app:title="@string/version_info_title" />

    </PreferenceCategory>

</PreferenceScreen>